samples/_failures_safe/1761330076_d1384b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6253eea3.c: In function ‘main’:
./samples/SAFE/__tmp_6253eea3.c:151:5: error: expected declaration or statement at end of input
  151 |     multiply_matrices(&mat1, &mat2, &result);
      |     ^~~~~~~~~~~~~~~~~
